# dune-awakening-selfhost-docker

./: .cache_ggshield  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .semgrepignore  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  README.md  ROADMAP.md  SECURITY.md  VERSION  docker-compose.metrics.yml  docker-compose.public-probe-host.yml  docker-compose.public-probe.yml  docker-compose.web.yml  docker-compose.yml  install.sh  log  log1  log2  log3
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md  soc2-evidence-gap.yml
.github/workflows/: ci.yml  discord-bot-security-gates.yml  dune-wan-probe.yml  image-sign.yml  security-gates.yml  semgrep-sast.yml  soc2-readiness-check.yml
.security-reports/: changed-files.txt  secret-keyword-review.txt  staged-files.txt
.security-reports/pr-files/: .env.example
addons/: state.json
admin-server/src/: carePackage.js  duneDb.js  preflight.js  runner.js  server.js
admin-server/test/: db.test.js  runner.test.js
backups/db/: dune-db-overmap_and_survival_1-20260628-152733.backup  dune-db-overmap_and_survival_1-20260628-152733.backup.yaml  dune-db-overmap_and_survival_1-20260628-155309.backup  dune-db-overmap_and_survival_1-20260628-155309.backup.yaml  dune-db-overmap_and_survival_1-20260629-135739.backup  dune-db-overmap_and_survival_1-20260629-135739.backup.yaml
backups/init-reset-20260628-143637/: funcom-token.txt
backups/init-reset-20260628-200425/: funcom-token.txt
console/api/: Dockerfile  entrypoint.sh  package-lock.json  package.json
console/web/: index.html  package-lock.json  package.json
container/: run-server.sh
data/: admin-items.json  admin-skill-modules.json  admin-vehicles.json  admin-xp-event-tags.json  journey-tags.json
director/config/: director_config.ini
discord-bot/: Dockerfile  README.md
discord-bot/scripts/: check-secrets.mjs  discord-channel-access.mjs  discord-install-url.mjs  discord-runtime.mjs  validate-scaffold.mjs
discord-bot/src/: index.ts
discord-bot/test/: discord-formatters.test.mjs  redaction.test.mjs
docs/: ARCHITECTURE.md  DUNE-CLI-TEST-PLAN.md  E2E-METRICS-TESTING.md  PR-EVIDENCE-ADDON-METRICS-SUPPORT.md  PR-metrics-upstream-body.md  PR-metrics-upstream.md  R1-METRICS-STACK-IMPLEMENTATION-NOTES.md  REQUIREMENTS.md  ROADMAP.md  WINDOWS-WSL-INSTALL.md  WINDOWS-WSL-QUICKSTART.md  WINDOWS-WSL-SECURITY-REGRESSION.md  addon-item-grants.md  addon-scheduled-jobs.md  augments-report.md  blueprints-report.md  blueprints-troubleshooting.md  blueprints.md  changelog-sbom-process.md  screenshots.md  security-gates.md  security-public-hosting.md  web-api.md  web-feature-parity-status.md  web-security.md  web-testing.md
docs/architecture/: CONTAINER-HARDENING.md  PRE-AUGMENTED-GEAR.md  RBAC-DESIGN.md  (+3 more)
orchestrator/: Dockerfile  dune_orchestrator.py  entrypoint.sh
releases/: index.md
runtime/scripts/: .self-update.sh.swp  admin-tools.sh  autoscaler.sh  build-director-compat.sh  config.sh  console.sh  db-orphan-audit.sh  db.sh  deferred-reconcile.sh  doctor.sh  dune  fls-signals.sh  heal-core-ready.sh  host-paths.sh  init.sh  ip-change-restart.sh  manager.sh  memory.sh  metrics-stack.sh  migrate.sh  network-addresses.sh  network-bind.sh  ping-diagnostics.sh  ports.sh  public-probe.sh  publish-deepdesert-overrides.sh  publish-deepdesert-state.sh  publish-network-server-state-overrides.sh  publish-sietch-overrides.sh  ready.sh  repair-chat-exchanges.sh  repair-host-runtime-permissions.sh  restart-schedule.sh  runtime-env.sh  self-update.sh  shutdown-protection.sh  sietches.sh  spawn-server.sh  spicefield-overrides.sh  start-all.sh  (+19 more)
scripts/: check-sbom-fresh.sh  create-upstream-prs.sh  export-github-actions-findings.mjs  generate-sbom.js  generate-sbom.mjs  generate-stride-report.mjs  generate-vulnerability-report.mjs  soc2-readiness-check.mjs  sync-vulnerability-issues.mjs  validate-changelog.sh  validate-security-automation.mjs
secrets/: admin-web-password.txt  admin-web-session-secret.txt  bot-api-token.txt  command-auth-token.txt  dev-webhook-url.txt  fls-apikey.txt  funcom-token.txt  rmq-http-token-auth-secret.txt  server-login-password-secret.txt  username-server-login-secret.txt
tests/: api-security-test.sh  bridge-smoke-test.sh  container-hardening-migration.test.sh  container-lifecycle-test.sh  dune-cli-test.sh  fls-signals-test.sh  ready-configured-ports-test.sh  release-gate-test.sh  security-pr-checks.sh  steamcmd-signals-test.sh  storage-cleanup-test.sh  test-command-auth-token.sh  update-db-role-privilege-test.sh  update-systemd-timer-health-test.sh
(+303 files in other folders)
