#!/usr/bin/env bash
set -euo pipefail

cd "$(dirname "$0")/../.."

cmd="${1:-help}"
target="${2:-}"

case "$cmd" in
  init)
    runtime/scripts/init.sh
    ;;

  manager|menu)
    runtime/scripts/manager.sh
    ;;

  start)
    runtime/scripts/start-all.sh
    ;;

  stop)
    runtime/scripts/stop-all.sh
    ;;

  status)
    runtime/scripts/status.sh
    ;;

  ps)
    docker ps --filter "name=dune-" --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
    ;;

  servers)
    runtime/scripts/servers.sh
    ;;

  spawn)
    shift
    runtime/scripts/spawn-server.sh "$@"
    ;;

  despawn)
    shift
    runtime/scripts/despawn-server.sh "$@"
    ;;

  autoscaler)
    shift || true
    if [ "$#" -eq 0 ]; then
      runtime/scripts/autoscaler.sh
    else
      runtime/scripts/autoscaler-control.sh "$@"
    fi
    ;;

  ports)
    runtime/scripts/ports.sh
    ;;

  ready)
    runtime/scripts/ready.sh
    ;;

  logs)
    shift || true
    runtime/scripts/logs.sh "$@"
    ;;

  restart)
    case "$target" in
      survival|survival-1)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-server-survival-1.sh
        ;;
      overmap)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-server-overmap.sh
        ;;
      gateway|sgw)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-server-gateway.sh
        ;;
      director|bgd)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-director.sh
        ;;
      text-router|tr)
        set -a; [ -f .env ] && . ./.env; set +a
        runtime/scripts/start-text-router.sh
        ;;
      "")
        echo "Usage: runtime/scripts/dune restart <survival|overmap|gateway|director|text-router>"
        exit 1
        ;;
      *)
        echo "Unknown restart target: $target"
        exit 1
        ;;
    esac
    ;;

  update)
    shift || true
    set -a
    [ -f .env ] && . ./.env
    set +a
    runtime/scripts/update.sh "$@"
    ;;

  version)
    runtime/scripts/version.sh
    ;;

  doctor)
    runtime/scripts/doctor.sh
    ;;

  db)
    shift || true
    runtime/scripts/db.sh "$@"
    ;;

  config|server)
    shift || true
    runtime/scripts/config.sh "$@"
    ;;

  memory)
    shift || true
    runtime/scripts/memory.sh "$@"
    ;;

  sietches)
    shift || true
    runtime/scripts/sietches.sh "$@"
    ;;

  help|--help|-h)
    cat <<'EOF'
Usage:
  runtime/scripts/dune init
  runtime/scripts/dune manager
  runtime/scripts/dune start
  runtime/scripts/dune stop
  runtime/scripts/dune status
  runtime/scripts/dune version
  runtime/scripts/dune doctor
  runtime/scripts/dune ps
  runtime/scripts/dune servers
  runtime/scripts/dune spawn <map-name|partition-id>
  runtime/scripts/dune despawn <map-name|partition-id|container-name>
  runtime/scripts/dune autoscaler [status|start|stop|restart|logs|run]
  runtime/scripts/dune ports
  runtime/scripts/dune ready
  runtime/scripts/dune logs <service> [--raw]
  runtime/scripts/dune restart <service>
  runtime/scripts/dune update [check|auto enable|auto disable|auto status|--yes]
  runtime/scripts/dune db backup [output-dir]
  runtime/scripts/dune db list
  runtime/scripts/dune db status
  runtime/scripts/dune db import <backup-file>
  runtime/scripts/dune db restore <backup-file>
  runtime/scripts/dune db delete <backup-file>
  runtime/scripts/dune db delete --all
  runtime/scripts/dune db auto enable <hours> [retention-days]
  runtime/scripts/dune db auto disable
  runtime/scripts/dune db auto status
  runtime/scripts/dune db auto retention <days>
  runtime/scripts/dune db auto retention off
  runtime/scripts/dune config title ["New Server Name"]
  runtime/scripts/dune memory status
  runtime/scripts/dune memory list-maps
  runtime/scripts/dune memory set <map-name> <memory>
  runtime/scripts/dune memory unset <map-name>
  runtime/scripts/dune memory set default <memory>
  runtime/scripts/dune memory unset default
  runtime/scripts/dune sietches [list|show <map-name>|dimensions <map-name>]
  runtime/scripts/dune sietches set-max <map-name> <count>
  runtime/scripts/dune sietches set-active <map-name> <count>
  runtime/scripts/dune sietches set-display <partition-id> <display-name>
  runtime/scripts/dune sietches set-password <partition-id> [password]

Services for logs/restart:
  postgres
  rmq-admin
  rmq-game
  text-router | tr
  director    | bgd
  gateway     | sgw
  survival    | survival-1
  overmap
EOF
    ;;

  *)
    echo "Unknown command: $cmd"
    echo "Run: runtime/scripts/dune help"
    exit 1
    ;;
esac
